workloads/sajin-moa/overlays/dev/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sajin-moa-frontend

spec:
  replicas: 1

  template:
    spec:
      containers:
        - name: frontend

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
